--- a/Proje.UI/Areas/User/Views/Siparis/SiparisOlustur.cshtml
+++ b/Proje.UI/Areas/User/Views/Siparis/SiparisOlustur.cshtml
@@ -10,7 +10,7 @@
 <div class="container">
 	<div class="row">
 		<div class="col">
-			<div class="menuler">
+			<div id="menuler">
 				<table class="table table-hover table-primary table-striped">
 
 					<tr>
@@ -29,6 +29,7 @@
 						</tr>
 					}
 				</table>
+			</div>
 				<div>
 					<select id="boyut">
 						@foreach (var item in Enum.GetValues(typeof(Boyut)))
@@ -39,7 +40,6 @@
 				</div>
 
 				<button type="button" class="btn btn-outline-secondary" onclick="SiparisGonder()">Sipariş Oluştur</button>
-			</div>
 		</div>
 		<div class="col">
 			<div id="siparisListesi" class="">
