--- a/Proje.UI/Areas/Admin/Views/Menu/Create.cshtml
+++ b/Proje.UI/Areas/Admin/Views/Menu/Create.cshtml
@@ -27,4 +27,4 @@
     </div>
 </div>
 
-<div asp-validation-summary="All" class="bg-danger"></div>
+<div asp-validation-summary="All" class="bg-danger text-white"></div>
