--- a/Proje.UI/Areas/Admin/Views/Menu/Delete.cshtml
+++ b/Proje.UI/Areas/Admin/Views/Menu/Delete.cshtml
@@ -9,21 +9,21 @@
 
 
 <div class="row">
-        <form asp-action="Delete" method="post">
-    <div class="col-md-4">
-        <div class="form-group">
-            <label name="Adi" class="control-label">Menü Adi</label>
-            <input name="Adi" asp-for="@Model.Adi" id="Adi" readonly="true" class="form-control" />
-            <input type="hidden" asp-for="@Model.Fiyat" value="@Model.Fiyat" />
-            <input type="hidden" asp-for="@Model.GuncellemeZamani" value="@Model.GuncellemeZamani" />
-            <input type="hidden" asp-for="@Model.OlusturmaZamani" value="@Model.OlusturmaZamani" />
-            
+    <form asp-action="Delete" method="post">
+        <div class="col-md-4">
+            <div class="form-group">
+                <label name="Adi" class="control-label">Menü Adi</label>
+                <input name="Adi" asp-for="@Model.Adi" id="Adi" readonly="true" class="form-control" />
+                <label name="Fiyat" class="control-label">Menü Fiyatı</label>
+                <input name="Fiyat" asp-for="@Model.Fiyat" id="Fiyat" readonly="true" class="form-control" />
+
+
+            </div>
+
         </div>
 
-    </div>
-
-    <div class="form-group">
-        <button class="btn btn-outline-dark">Sil</button>
-    </div>
+        <div class="form-group">
+            <button class="btn btn-outline-dark">Sil</button>
+        </div>
     </form>
 </div>
