--- a/Proje.UI/Areas/Admin/Views/Menu/Create.cshtml
+++ b/Proje.UI/Areas/Admin/Views/Menu/Create.cshtml
@@ -7,16 +7,20 @@
 
 <div class="row">
     <div class=" col-md-4">
-        <form asp-controller="Menu" asp-action="Create" method="post">
+        <form asp-controller="Menu" asp-action="Create" enctype="multipart/form-data" method="post">
             <div class="form-group">
-                <label for="Adi" class="control-label">Menü Adı</label>
+                <label asp-for="Adi" class="control-label">Menü Adı</label>
                 <input name="Adi" placeholder="Menü Adı" asp-for="Adi" class="form-control" />
                 <span asp-validation-for="Adi" class="text-danger"></span>
 
-                <label for="Fiyat" class="control-label">Menü Fiyatı</label>
+                <label asp-for="Fiyat" class="control-label">Menü Fiyatı</label>
                 <input name="Fiyat" type="number"  min="0" placeholder="1.0" step="0.1" asp-for="Fiyat" class="form-control" />
                 <span asp-validation-for="Fiyat" class="text-danger"></span>
-
+            </div>
+            <div class="form-group">
+                <label asp-for="Image" class="control-label">Menü Fiyatı</label>
+                <input type="file" asp-for="Image" class="form-control" />
+                <span asp-validation-for="Image" class="text-danger"></span>
             </div>
 
 
