--- a/Proje.UI/Views/Shared/_Layout.cshtml
+++ b/Proje.UI/Views/Shared/_Layout.cshtml
@@ -65,7 +65,7 @@
                                 <a href="testimonial.html" class="dropdown-item">Testimonial</a>
                             </div>
                         </div> *@
-                        <a href="contact.html" class="nav-item nav-link">Contact</a>
+                        <a asp-action="ContactUs" asp-controller="Home" class="nav-item nav-link">Contact</a>
                     </div>
                     <a href="" class="btn btn-primary py-2 px-4">Sipariş Ver</a>
 
