--- a/Proje.UI/Areas/User/Views/Siparis/SepetiOnayla.cshtml
+++ b/Proje.UI/Areas/User/Views/Siparis/SepetiOnayla.cshtml
@@ -1,48 +1,55 @@
-﻿@using Proje.BLL.Models.DTOs;
+﻿@using Microsoft.AspNetCore.Identity;
+@using Proje.BLL.Models.DTOs;
+@using Proje.DATA.Entities;
 @model SepetiOnaylaDTO
-
+@inject UserManager<AppUser> UserManager
 @{
     ViewData["Title"] = "SepetiOnayla";
+    AppUser user = await UserManager.GetUserAsync(User);
 }
 
 @{
     decimal totalFiyat = 0;
 }
-<div class="container-xxl py-5 bg-dark  mb-5">
-    <div class="container text-center my-5 pt-5 pb-4">
-        <h1 class="display-3 text-white mb-3 animated slideInDown">Sipariş Oluştur</h1>
-        <div class="col">
-            <div class="row">
-                <div id="siparisListesi">
-                    <table class="table table-hover table-success">
-                        <tr>
-                            <th>Sepetinizdekiler</th>
-                            <th>Fiyat</th>
-                            <th></th>
-                        </tr>
-                        @foreach (var item in Model.Sepettekiler)
-                        {
-                            totalFiyat += item.Fiyat;
+    <div class="container-xxl py-5 bg-dark  mb-5">
+        <div class="container text-center my-5 pt-5 pb-4">
+            <h1 class="display-3 text-white mb-3 animated slideInDown">Sipariş Oluştur</h1>
+            <div class="col">
+                <div class="row">
+                    <div id="siparisListesi">
+                    <div>
+                        <input type="hidden" value="@user.Id" id="userID" />
+                    </div>
+                        <table class="table table-hover table-success">
                             <tr>
-                                <td>@item.MenuID @item.Boyut.ToString() x @item.Adet.ToString()</td>
-                                <td>@item.Fiyat</td>
-                                <td><button type="button" class="btn btn-outline-danger" onclick="SepettenSil(@item.ID)">-</button></td>
+                                <th>Sepetinizdekiler</th>
+                                <th>Fiyat</th>
+                                <th></th>
                             </tr>
-                        }
-                        <tr>
-                            <td></td>
-                            <td>@totalFiyat</td>
-                        </tr>
-                    </table>
+                            @foreach (var item in Model.Sepettekiler)
+                            {
+                                totalFiyat += item.Fiyat;
+                                <tr>
+                                    <td>@item.MenuID @item.Boyut.ToString() x @item.Adet.ToString()</td>
+                                    <td>@item.Fiyat</td>
+                                    <td><button type="button" class="btn btn-outline-danger" onclick="SepettenSil(@item.ID)">-</button></td>
+                                </tr>
+                            }
+                            <tr>
+                                <td></td>
+                                <td>@totalFiyat</td>
+                            </tr>
+                        </table>
 
-                </div>
-                <div>
-                    <a asp-action="SiparisOnayla" class="btn btn-primary">Siparişi Onayla</a>
+                    </div>
+                    <div>
+                        <a asp-action="SiparisOnayla" asp-route-id="@user.Id" class="btn btn-primary">Siparişi Onayla</a>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
+
 
 
 
