--- a/Proje.UI/Views/User/Login.cshtml
+++ b/Proje.UI/Views/User/Login.cshtml
@@ -6,9 +6,11 @@
 
 <partial name="_ValidationScriptsPartial"/>
 
-<div class="container-xxl py-5 bg-dark  mb-5">
+<div class="container-xxl py-5 bg-dark hero-header mb-5">
     <div class="container text-center my-5 pt-5 pb-4">
         <h1 class="display-3 text-white mb-3 animated slideInDown">Giriş Yap</h1>
+        </div>
+        </div>
         
             
         
@@ -31,7 +33,7 @@
                                 <form asp-action="Login" asp-controller="User" method="post">
 
                                     <div class="d-flex align-items-center mb-3 pb-1">
-                                        <i class="fas fa-cubes fa-2x me-3" style="color: #ff6219;"></i>
+                                        <i class="fas fa-hamburger fa-2x me-3" style="color: #ff6219;"></i>
                                         <span class="h1 fw-bold mb-0">Logo</span>
                                     </div>
 
@@ -54,10 +56,10 @@
                                         <input class="btn btn-dark btn-lg btn-block" type="submit" value="Giriş"/>
                                     </div>
 
-                                    <a class="small text-muted" href="#!">Forgot password?</a>
+                                    <a class="small text-muted" href="#!">Şifrenizi unuttunuz mu?</a>
                                     <p class="mb-5 pb-lg-2" style="color: #393f81;">
-                                        Don't have an account? <a href="#!"
-                                                                  style="color: #393f81;">Register here</a>
+                                        Hesabınız mı yok? <a href="#!"
+                                                                  style="color: #393f81;">Buradan kayıt olun.</a>
                                     </p>
                                     <a href="#!" class="small text-muted">Terms of use.</a>
                                     <a href="#!" class="small text-muted">Privacy policy</a>
@@ -71,5 +73,4 @@
         </div>
     </div>
 </section>
-    </div>
-</div>
+ 
