--- a/Proje.UI/Views/User/Register.cshtml
+++ b/Proje.UI/Views/User/Register.cshtml
@@ -7,6 +7,12 @@
 
 <partial name="_ValidationScriptsPartial" />
 
+<div class="container-xxl py-5 bg-dark hero-header mb-5">
+    <div class="container text-center my-5 pt-5 pb-4">
+        <h1 class="display-3 text-white mb-3 animated slideInDown">Kayıt Ol</h1>
+    </div>
+</div>
+
 <section class="vh-100 gradient-custom">
     <div class="container py-5 h-100">
         <div class="row justify-content-center align-items-center h-100">
