--- a/Proje.UI/Areas/Admin/Views/Shared/PartialViews/_SidebarPartialView.cshtml
+++ b/Proje.UI/Areas/Admin/Views/Shared/PartialViews/_SidebarPartialView.cshtml
@@ -13,7 +13,7 @@
 
     <!-- Nav Item - Dashboard -->
     <li class="nav-item active">
-        <a class="nav-link" href="index.html">
+        <a class="nav-link" asp-area="Admin" asp-action="Index" asp-controller="Dashboard">
             <i class="fas fa-fw fa-tachometer-alt"></i>
             <span>Dashboard</span>
         </a>
