--- a/Proje.UI/Views/User/Register.cshtml
+++ b/Proje.UI/Views/User/Register.cshtml
@@ -69,7 +69,7 @@
                                 </div>
                                 <div class="col-md-6 mb-4">
 
-                                    <h6 class="mb-2 pb-1">Gender: </h6>
+                                    <h6 class="mb-2 pb-1">Cinsiyet</h6>
 
                                     <div class="form-check form-check-inline">
                                         <input class="form-check-input" type="radio" name="inlineRadioOptions" asp-for="Cinsiyet"
@@ -90,16 +90,16 @@
                                 <div class="col-md-6 mb-4 pb-2">
 
                                     <div class="form-outline">
-                                        <input type="email" asp-for="Email" class="form-control form-control-lg" />
                                         <label class="form-label" asp-for="Email">Email</label>
+                                        <input type="email" asp-for="Email" class="form-control form-control-lg" />
                                     </div>
 
                                 </div>
                                 <div class="col-md-6 mb-4 pb-2">
 
                                     <div class="form-outline">
-                                        <input type="tel" asp-for="PhoneNumber" class="form-control form-control-lg" />
                                         <label class="form-label" asp-for="PhoneNumber">Telefon Numarası</label>
+                                        <input type="tel" asp-for="PhoneNumber" class="form-control form-control-lg" />
                                     </div>
 
                                 </div>
