--- a/Proje.UI/Areas/User/Views/Siparis/SiparisOlustur.cshtml
+++ b/Proje.UI/Areas/User/Views/Siparis/SiparisOlustur.cshtml
@@ -4,74 +4,47 @@
 @using Proje.DATA.Enums;
 @model SiparisOlusturDTO
 @inject UserManager<AppUser> UserManager
-
 @{
     ViewData["Title"] = "SiparisOlustur";
     AppUser user = await UserManager.GetUserAsync(User);
 }
+
 <div class="container-xxl py-5 bg-dark  mb-5">
     <div class="container text-center my-5 pt-5 pb-4">
         <h1 class="display-3 text-white mb-3 animated slideInDown">Sipariş Oluştur</h1>
-        <div>
-            <input type="hidden" value="@user.Id" id="userID" />
-        </div>
-        <div class="container">
-            <div class="row">
-                <div class="col">
-                    <div id="menuler">
-                        <table class="table table-hover table-primary table-striped">
-
-                            <tr>
-                                <th>Menü Adı</th>
-                                <th>Fiyat</th>
-                                <th></th>
-                            </tr>
-                            @foreach (Menu menu in Model.Menuler)
-                            {
-                                <tr>
-                                    <td>@menu.Adi</td>
-                                    <td>@menu.Fiyat</td>
-                                    <td>
-                                        <input type="radio" name="menuID" value="@menu.ID" />
-                                    </td>
-                                </tr>
-                            }
-                        </table>
-                    </div>
-                    <div>
-                        <select id="boyut">
-                            @foreach (var item in Enum.GetValues(typeof(Boyut)))
-                            {
-                                <option value="@item">@item.ToString()</option>
-                            }
-                        </select>
-
-                        <input type="number" value="1" id="adet" />
-                    </div>
-
-                    <button type="button" class="btn btn-outline-secondary" onclick="SiparisGonder()">Sepete Ekle</button>
-                </div>
-                <div class="col">
-                    <div id="siparisListesi">
-                        <table class="table table-hover table-success">
-                            <tr>
-                                <th>Sepetinizdekiler</th>
-                                <th>Fiyat</th>
-                            </tr>
-
-                        </table>
-
-                    </div>
-                    <div>
-                        <a asp-action="SepetiOnayla" class="btn btn-primary">Sepeti Onayla</a>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-
     </div>
 </div>
+<div class="container">
+    <div class="row">
+        <div class="col-9">
+            <section class="products">
+                @foreach (Menu menu in Model.Menuler)
+                {
+                    <div class="all-products">
+                        <div class="product">
+                            <img class="img-fluid" src="data:image/jpeg;base64,@Convert.ToBase64String(menu.Fotograf)">
+                            <div class="product-info">
+                                <h4 class="product-title">
+                                    @menu.Adi
+                                </h4>
+                                <p class="product-price">@menu.Fiyat</p>
+                                <a class="product-btn btn-primary" href="#">Sepete Ekle</a>
+                            </div>
+                        </div>
+                    </div>
+                }
+            </section>
+        </div>
+        <div class="col-3" id="siparisListesi">
+           
+        </div>
+    </div>
+</div>
+<div>
+    <input type="hidden" value="@user.Id" id="userID" />
+</div>
+
+
 
 
 
