--- a/Proje.UI/Areas/User/Views/Siparis/_SiparisListesi.cshtml
+++ b/Proje.UI/Areas/User/Views/Siparis/_SiparisListesi.cshtml
@@ -7,14 +7,15 @@
 }
 <table class="table table-hover table-success">
 	<tr>
-		<th>Sepetinizdekiler</th>
-		<th>Fiyat</th>
+		<th></th>
+		<th></th>
 		<th></th>
 	</tr>
 	@foreach (var item in Model.Sepettekiler)
 	{
 		totalFiyat += item.Fiyat;
 		<tr>
+			<td><img class="img-fluid" src="data:image/jpeg;base64,@Convert.ToBase64String(menu.Fotograf)"></td>
 			<td>@item.MenuID @item.Boyut.ToString() x @item.Adet.ToString()</td>
 			<td>@item.Fiyat</td>
 			<td><button type="button" class="btn btn-outline-danger" onclick="SepettenSil(@item.ID)">-</button></td>
