--- a/Proje.UI/Areas/User/Views/Shared/_Layout.cshtml
+++ b/Proje.UI/Areas/User/Views/Shared/_Layout.cshtml
@@ -172,7 +172,7 @@
     <script src="~/template2/lib/tempusdominus/js/moment.min.js"></script>
     <script src="~/template2/lib/tempusdominus/js/moment-timezone.min.js"></script>
     <script src="~/template2/lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
-
+	<script src="~/js/site.js"></script>
     <!-- Template Javascript -->
     <script src="~/template2/js/main.js"></script>
 
