--- a/Proje.UI/Areas/User/Views/Siparis/SiparisOlustur.cshtml
+++ b/Proje.UI/Areas/User/Views/Siparis/SiparisOlustur.cshtml
@@ -28,7 +28,60 @@
                                     @menu.Adi
                                 </h4>
                                 <p class="product-price">@menu.Fiyat</p>
-                                <button class="btn product-btn btn-primary" onclick="SiparisGonder(@menu.ID)">Sepete Ekle</button>
+                                @*<button class="btn product-btn btn-primary" onclick="SiparisGonder(@menu.ID)">Sepete Ekle</button>*@
+                                <div>
+                                    <!-- Button trigger modal -->
+                                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                                        SEPETE EKLE
+                                    </button>
+
+                                    <!-- Modal -->
+                                    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                        <div class="modal-dialog modal-dialog-centered">
+                                            <div class="modal-content">
+                                                <div class="modal-header justify-content-center">
+                                                    <img class="img-fluid" src="data:image/jpeg;base64,@Convert.ToBase64String(menu.Fotograf)">
+                                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                                </div>
+                                                <div class="modal-body">
+                                                    <table>
+                                                        <tr>
+                                                            <th></th>
+                                                            <th>@menu.Adi</th>
+                                                            <th></th>
+                                                        </tr>
+                                                        <tr>
+                                                            <td>Küçük</td>
+                                                            <td>@menu.Fiyat</td>
+                                                            <td><input type="radio" name="boyut" checked="checked" value="@Boyut.Küçük"/></td>
+                                                        </tr>
+                                                        @{
+                                                            decimal fiyat = menu.Fiyat * 1.2M;
+                                                        }
+                                                        <tr>
+                                                            <td>Orta</td>
+                                                            <td>@fiyat</td>
+                                                            <td><input type="radio" name="boyut" value="@Boyut.Orta"/></td>
+                                                        </tr>
+                                                        @{
+                                                            fiyat = menu.Fiyat * 1.4M;
+                                                        }
+                                                        <tr>
+                                                            <td>Büyük</td>
+                                                            <td>@fiyat</td>
+                                                            <td><input type="radio" name="boyut" value="@Boyut.Büyük"/></td>
+                                                        </tr>
+                                                        
+                                                    </table>
+                                                </div>
+                                                <div class="modal-footer">
+                                                    <button type="button" class="btn btn-danger" data-bs-dismiss="modal">İptal</button>
+                                                    <button type="button" class="btn btn-primary" data-bs-dismiss="modal" onclick="SiparisGonder(@menu.ID)">Sepete Ekle</button>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -52,9 +105,9 @@
 </div>
 <div>
     <input type="hidden" value="@user.Id" id="userID" />
-    <input type="hidden" value="@Boyut.Küçük" id="boyut" />
     <input type="hidden" value="1" id="adet" />
 </div>
+
 
 
 
