--- a/Proje.UI/Areas/User/Views/Siparis/SiparisOlustur.cshtml
+++ b/Proje.UI/Areas/User/Views/Siparis/SiparisOlustur.cshtml
@@ -11,7 +11,7 @@
 
 <div class="container-xxl py-5 bg-dark  mb-5">
     <div class="container text-center my-5 pt-5 pb-4">
-        <h1 class="display-3 text-white mb-3 animated slideInDown">Sipariş Oluştur</h1>
+        <h1 class="display-3 text-white mb-3 animated slideInDown">MENÜLER</h1>
     </div>
 </div>
 <div class="container">
@@ -20,59 +20,61 @@
             <section class="products">
                 @foreach (Menu menu in Model.Menuler)
                 {
+                    string modalAdi = "modalAdi" + menu.ID.ToString();
+                    string modalAdihashtag = "#" + modalAdi;
                     <div class="all-products">
                         <div class="product">
                             <img class="img-fluid" src="data:image/jpeg;base64,@Convert.ToBase64String(menu.Fotograf)">
                             <div class="product-info">
                                 <h4 class="product-title">
-                                    @menu.Adi
+                                    @menu.Adi Menü
                                 </h4>
                                 <p class="product-price">@menu.Fiyat</p>
                                 @*<button class="btn product-btn btn-primary" onclick="SiparisGonder(@menu.ID)">Sepete Ekle</button>*@
                                 <div>
                                     <!-- Button trigger modal -->
-                                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target=@modalAdihashtag>
                                         SEPETE EKLE
                                     </button>
 
                                     <!-- Modal -->
-                                    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                    <div class="modal fade" id=@modalAdi tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                                         <div class="modal-dialog modal-dialog-centered">
                                             <div class="modal-content">
-                                                <div class="modal-header justify-content-center">
+                                                <div class="modal-header">
                                                     <img class="img-fluid" src="data:image/jpeg;base64,@Convert.ToBase64String(menu.Fotograf)">
-                                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                                 </div>
-                                                <div class="modal-body">
-                                                    <table>
-                                                        <tr>
-                                                            <th></th>
-                                                            <th>@menu.Adi</th>
-                                                            <th></th>
-                                                        </tr>
-                                                        <tr>
-                                                            <td>Küçük</td>
-                                                            <td>@menu.Fiyat</td>
-                                                            <td><input type="radio" name="boyut" checked="checked" value="@Boyut.Küçük"/></td>
-                                                        </tr>
-                                                        @{
-                                                            decimal fiyat = menu.Fiyat * 1.2M;
-                                                        }
-                                                        <tr>
-                                                            <td>Orta</td>
-                                                            <td>@fiyat</td>
-                                                            <td><input type="radio" name="boyut" value="@Boyut.Orta"/></td>
-                                                        </tr>
-                                                        @{
-                                                            fiyat = menu.Fiyat * 1.4M;
-                                                        }
-                                                        <tr>
-                                                            <td>Büyük</td>
-                                                            <td>@fiyat</td>
-                                                            <td><input type="radio" name="boyut" value="@Boyut.Büyük"/></td>
-                                                        </tr>
-                                                        
-                                                    </table>
+                                                <div class="modal-body" >
+                                                    <form id="modalform">
+                                                        <h2>@menu.Adi Menü</h2>
+                                                        <hr>
+                                                        <table >
+                                                            
+                                                            <tr>
+                                                                <td>Küçük</td>
+                                                                <td>@menu.Fiyat TL</td>
+                                                                <td><input type="radio" name="boyut" checked="checked" value="@Boyut.Küçük" /></td>
+                                                            </tr>
+                                                            @{
+                                                                decimal fiyat = menu.Fiyat * 1.2M;
+                                                            }
+                                                            <tr>
+                                                                <td>Orta</td>
+                                                                <td>@fiyat TL</td>
+                                                                <td><input type="radio" name="boyut" value="@Boyut.Orta" /></td>
+                                                            </tr>
+                                                            @{
+                                                                fiyat = menu.Fiyat * 1.4M;
+                                                            }
+                                                            <tr>
+                                                                <td>Büyük</td>
+                                                                <td>@fiyat TL</td>
+                                                                <td><input type="radio" name="boyut" value="@Boyut.Büyük" /></td>
+                                                            </tr>
+
+                                                        </table>
+                                                    </form>
+                                                    
                                                 </div>
                                                 <div class="modal-footer">
                                                     <button type="button" class="btn btn-danger" data-bs-dismiss="modal">İptal</button>
