--- a/Proje.UI/Views/PasswordChange/ForgetPassword.cshtml
+++ b/Proje.UI/Views/PasswordChange/ForgetPassword.cshtml
@@ -7,6 +7,8 @@
     <div class="container text-center my-5 pt-5 pb-4">
         <h1 class="display-3 text-white mb-3 animated slideInDown">Şifre Yenileme Sayfası</h1>
         <form method="post">
+            <div class="bg-danger text-white">@ViewBag.Uyarı</div>
+            <div class="bg-success text-white">@ViewBag.Tamamlandı</div>
             <div class="form-group">
                 <label>Mail Adresinizi Giriniz</label>
                 <input type="text" class="form-control" asp-for="Mail" />
