--- a/Proje.UI/wwwroot/css/site.css
+++ b/Proje.UI/wwwroot/css/site.css
@@ -1,18 +1,88 @@
 html {
-  font-size: 14px;
+    font-size: 14px;
 }
 
 @media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+    html {
+        font-size: 16px;
+    }
 }
 
 html {
-  position: relative;
-  min-height: 100%;
+    position: relative;
+    min-height: 100%;
 }
 
 body {
-  margin-bottom: 60px;
+    margin-bottom: 60px;
 }
+
+.shopping img {
+    width: 40px;
+}
+
+.shopping span {
+    background: orange;
+    border-radius: 50%;
+    color: #fff;
+    top: -5px;
+    left: 80%;
+    padding: 3px 10px;
+}
+
+.Sepet {
+    position: fixed;
+    top: 0;
+    left: 100%;
+    width: 500px;
+    background-color: #453E3B;
+    height: 100vh;
+    transition: 0.5s;
+    z-index: 1000;
+}
+
+.active .Sepet {
+    left: calc(100% - 500px);
+}
+
+.Sepet h1 {
+    color: #E8BC0E;
+    font-weight: 100;
+    margin: 0;
+    padding: 0 20px;
+    height: 80px;
+    display: flex;
+    align-items: center;
+}
+
+.Sepet .checkOut {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.Sepet .tamam {
+    position: absolute;
+    bottom: 70px;
+    width: 100%;
+}
+
+.Sepet .checkOut div{
+    background-color: #E8BC0E;
+    width: 100%;
+    height: 70px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+
+.Sepet .checkOut div:nth-child(2) {
+    background-color: #1C1F25;
+    color: #fff;
+}
+
