--- a/Proje.UI/Areas/Admin/Views/Menu/Index.cshtml
+++ b/Proje.UI/Areas/Admin/Views/Menu/Index.cshtml
@@ -29,8 +29,8 @@
 
 
                 <td>
-                        <a class="btn btn-warning" asp-action="Edit" asp-route-id="@menu.ID"> Details</a>
-                        <a class="btn btn-danger" asp-action="Delete" asp-route-id="@menu.ID"> Delete</a>
+                        <a class="btn btn-warning" asp-action="Edit" asp-route-id="@menu.ID"> Düzenle</a>
+                        <a class="btn btn-danger" asp-action="Delete" asp-route-id="@menu.ID"> Sil</a>
                 </td>
                     
 
