--- a/Proje.UI/Views/Shared/_Layout.cshtml
+++ b/Proje.UI/Views/Shared/_Layout.cshtml
@@ -51,7 +51,7 @@
     <header>
         <div class="container-xxl position-relative p-0">
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark px-4 px-lg-5 py-3 py-lg-0">
-                <a href="" class="navbar-brand p-0">
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand p-0">
                     <h1 class="text-primary m-0"><i class="fa fa-hamburger me-3"></i>Maka Burger</h1>
                     <!-- <img src="img/logo.png" alt="Logo"> -->
                 </a>
