--- a/Proje.UI/Areas/User/Views/Shared/_Layout.cshtml
+++ b/Proje.UI/Areas/User/Views/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
     <header>
         <div class="container-xxl position-relative p-0">
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark px-4 px-lg-5 py-3 py-lg-0">
-                <a href="" class="navbar-brand p-0">
+                <a asp-area ="" asp-controller="Home" asp-action="Index" class="navbar-brand p-0">
                     <h1 class="text-primary m-0"><i class="fa fa-hamburger me-3"></i>Maka Burger</h1>
                     <!-- <img src="img/logo.png" alt="Logo"> -->
                 </a>
@@ -51,9 +51,9 @@
 
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav ms-auto py-0 pe-4">
-                        <a class="nav-item nav-link active" asp-controller="Home" asp-action="Index">Anasayfa</a>
+                        <a class="nav-item nav-link active" asp-area="" asp-controller="Home" asp-action="Index">Anasayfa</a>
                         @* <a class="nav-item nav-link" asp-controller="Home" asp-action="Privacy">Privacy</a> *@
-                        <a asp-action="ContactUs" asp-controller="Home" class="nav-item nav-link">İletişim</a>
+                        <a asp-area="" asp-action="ContactUs" asp-controller="Home" class="nav-item nav-link">İletişim</a>
                         <partial name="_LoginPartialView" />
                         @* <a href="service.html" class="nav-item nav-link">Service</a>
                         <a href="menu.html" class="nav-item nav-link">Menu</a> *@
