--- a/Proje.UI/Areas/Admin/Views/ExtraMalzeme/Create.cshtml
+++ b/Proje.UI/Areas/Admin/Views/ExtraMalzeme/Create.cshtml
@@ -1,9 +1,7 @@
-<<<<<<< HEAD
-﻿@    using Proje.BLL.Models.DTOs.ExtraMalzeme
-=======
-﻿@using Proje.BLL.Models.DTOs.ExtraMalzeme
+
+﻿@using Proje.BLL.Models.DTOs.ExtraMalzemeDTO
 @using Proje.DATA.Enums;
->>>>>>> 671f99b4987e0f925da8ae217aa1c40b53463fdd
+
 @model CreateExtraMalzemeDTO
 @{
     ViewData["Title"] = "Create";
