--- a/Proje.UI/Areas/User/Views/Siparis/SiparisOlustur.cshtml
+++ b/Proje.UI/Areas/User/Views/Siparis/SiparisOlustur.cshtml
@@ -86,6 +86,7 @@
                                                                     <tr>
                                                                         <td>@item.Adi</td>
                                                                         <td>@item.Fiyat</td>
+                                                                        <td><input type="checkbox" value="@item.ID" onclick="malzemeEkle(@item.ID)" /></td>
                                                                     </tr>
                                                                 }
                                                                 
@@ -100,6 +101,7 @@
                                                                     <tr>
                                                                         <td>@item.Adi</td>
                                                                         <td>@item.Fiyat</td>
+                                                                        <td><input type="checkbox" value="@item.ID" onclick="malzemeEkle(@item.ID)" /> </td>
                                                                     </tr>
                                                                 }
 
@@ -114,6 +116,7 @@
                                                                     <tr>
                                                                         <td>@item.Adi</td>
                                                                         <td>@item.Fiyat</td>
+                                                                        <td><input type="checkbox" value="@item.ID" onclick="malzemeEkle(@item.ID)" /></td>
                                                                     </tr>
                                                                 }
 
