--- a/Proje.UI/Areas/Admin/Views/Menu/Create.cshtml
+++ b/Proje.UI/Areas/Admin/Views/Menu/Create.cshtml
@@ -6,7 +6,7 @@
     <div class="card">
         <div class="card-header">
             <div class="card-body">
-                <form asp-controller="ExtraMalzeme" asp-action="Create" method="post">
+                <form asp-controller="Menu" asp-action="Create" method="post">
                     <h4 class="card-title">Menü Ekle</h4>
                     <br />
                     <div class="form-group">
