--- a/Proje.UI/Areas/User/Views/Shared/_Layout.cshtml
+++ b/Proje.UI/Areas/User/Views/Shared/_Layout.cshtml
@@ -161,7 +161,7 @@
 	<script src="~/js/site.js"></script>
     <!-- Template Javascript -->
     <script src="~/template2/js/main.js"></script>
-
+    <script src="~/js/sepet.js"></script>
     
     @await RenderSectionAsync("Scripts", required: false)
 </body>
