--- a/Proje.UI/Views/Home/Index.cshtml
+++ b/Proje.UI/Views/Home/Index.cshtml
@@ -198,7 +198,7 @@
                                         <div class="w-100 d-flex flex-column text-start ps-4">
                                             <h5 class="d-flex justify-content-between border-bottom pb-2">
                                                 <span>@item.Adi</span>
-                                                <span class="text-primary">$@item.Fiyat</span>
+                                                <span class="text-primary">₺@item.Fiyat</span>
                                             </h5>
                                         </div>
                                     </div>
