--- a/Proje.UI/Areas/Admin/Views/Shared/PartialViews/_FooterPartialView.cshtml
+++ b/Proje.UI/Areas/Admin/Views/Shared/PartialViews/_FooterPartialView.cshtml
@@ -1,7 +1,7 @@
 ﻿<footer class="sticky-footer bg-white">
     <div class="container my-auto">
         <div class="copyright text-center my-auto">
-            <span>Copyright &copy; Your Website 2021</span>
+            <span>Copyright &copy; MAKA 2023</span>
         </div>
     </div>
 </footer>
