--- a/Proje.UI/Views/ConfirmMail/Index.cshtml
+++ b/Proje.UI/Views/ConfirmMail/Index.cshtml
@@ -3,7 +3,11 @@
 @{
     ViewData["Title"] = "Index";
 }
-
+<div class="container-xxl py-5 bg-dark hero-header mb-5">
+    <div class="container text-center my-5 pt-5 pb-4">
+        <h1 class="display-3 text-white mb-3 animated slideInDown">Hesabını Aktifleştir</h1>
+    </div>
+</div>
 <form method="post">
     <h2>Mail Adresiniz: @ViewBag.Email</h2>
     <input type="hidden" asp-for="Email" value="@ViewBag.Email"/>
